--- a/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
@@ -35,6 +35,10 @@
 
     ApexCharts.ApexChartOptions<DataPoint> options = new ApexCharts.ApexChartOptions<DataPoint>
         {
+            Chart = new ApexCharts.Chart
+            {
+                Background = "var(--mud-palette-drawer-background)",
+            },
             Theme = new ApexCharts.Theme
             {
                 Mode = ApexCharts.Mode.Dark,
