--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/WccResultChart.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/WccResultChart.razor
@@ -39,6 +39,10 @@
     {
         options = new ApexCharts.ApexChartOptions<DataPoint>
             {
+                Chart = new ApexCharts.Chart
+                {
+                    Background = "var(--mud-palette-drawer-background)",
+                },
                 Theme = new ApexCharts.Theme
                 {
                     Mode = ApexCharts.Mode.Dark,
