--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -34,10 +34,13 @@
             </MudItem>
             <MudItem xs="4">
                 <MudPaper Class="mud-height-full">
+                    
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="4">
+                <MudPaper Class="mud-height-full">
                     <MudText Typo="Typo.h5">Final standings</MudText>
-                    <MudText>
-                        Points for FL aren't shown here yet, they will be assigned though
-                    </MudText>
+                    <MudText>Points for FL aren't shown here yet, they will be assigned though</MudText>
                     <MudTable T="Result" Items="@Results.OrderBy(e => e.Position)" Dense="true" Class="extra-dense">
                         <HeaderContent>
                             <MudTh>#</MudTh>
@@ -57,9 +60,9 @@
                             </MudTd>
                             <MudTd>
                                 <MudText>@(context.SeasonDriver.Driver.FullName)</MudText>
-                            </MudTd>
-                            <MudTd>
-                                @if (context.Status == RaceStatus.Racing)
+                                </MudTd>
+                                <MudTd>
+                                    @if (context.Status == RaceStatus.Racing)
                                 {
                                     <MudText Typo="Typo.caption">@(ReadScoredResult(context.Position, (context.Grid == 1)))</MudText>
                                 }
@@ -73,51 +76,52 @@
                 </MudPaper>
             </MudItem>
             <MudItem xs="4">
-                <MudPaper Class="mud-height-full">
-                    <MudText Typo="Typo.h5">Incidents during the race</MudText>
-                    <MudSimpleTable>
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Incident</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var result in Results.Where(e => e.Incident != null))
-                            {
+                <MudStack Class="mud-height-full">
+                    <MudPaper Height="50%">
+                        <MudText Typo="Typo.h5">Incidents during the race</MudText>
+                        <MudSimpleTable>
+                            <thead>
                                 <tr>
-                                    <td>@(result.SeasonDriver.Driver.FullName)</td>
-                                    <td>@(result.Incident?.Name)</td>
-                                    <td>@(result.Status)</td>
+                                    <th>Name</th>
+                                    <th>Incident</th>
+                                    <th>Status</th>
                                 </tr>
-                            }
-                        </tbody>
-                    </MudSimpleTable>
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="4">
-                <MudPaper Class="mud-height-full">
-                    <MudText Typo="Typo.h5">Upcoming penalties</MudText>
-                    <MudTable T="DriverPenalty" Items="@DriverPenalties" Dense="true" Class="extra-dense">
-                        <HeaderContent>
-                            <MudTh>Name</MudTh>
-                            <MudTh>Incident</MudTh>
-                            <MudTh>Punish</MudTh>
-                        </HeaderContent>
-                        <RowTemplate>
-                            <MudTd>
-                                <MudText>@(context.Name)</MudText>
-                            </MudTd>
-                            <MudTd>
-                                <MudText>@(context.Reason)</MudText>
-                            </MudTd>
-                            <MudTd>
-                                <MudText Typo="Typo.caption">@(context.Punishment)</MudText>
-                            </MudTd>
-                        </RowTemplate>
-                    </MudTable>
-                </MudPaper>
+                            </thead>
+                            <tbody>
+                                @foreach (var result in Results.Where(e => e.Incident != null))
+                                {
+                                    <tr>
+                                        <td>@(result.SeasonDriver.Driver.FullName)</td>
+                                        <td>@(result.Incident?.Name)</td>
+                                        <td>@(result.Status)</td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </MudSimpleTable>
+                    </MudPaper>
+                    <MudPaper Height="50%">
+                        <MudText Typo="Typo.h5">Upcoming penalties</MudText>
+                        <MudTable T="DriverPenalty" Items="@DriverPenalties" Dense="true" Class="extra-dense">
+                            <HeaderContent>
+                                <MudTh>Name</MudTh>
+                                <MudTh>Incident</MudTh>
+                                <MudTh>Punish</MudTh>
+                            </HeaderContent>
+                            <RowTemplate>
+                                <MudTd>
+                                    <MudText>@(context.Name)</MudText>
+                                </MudTd>
+                                <MudTd>
+                                    <MudText>@(context.Reason)</MudText>
+                                </MudTd>
+                                <MudTd>
+                                    <MudText Typo="Typo.caption">@(context.Punishment)</MudText>
+                                </MudTd>
+                            </RowTemplate>
+                        </MudTable>
+                    </MudPaper>
+
+                </MudStack>
             </MudItem>
         </MudGrid>
     }
