--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -10,7 +10,7 @@
                 <MudItem xs="12">
                     <MudPaper Height="75px" Class="pa-4">
                         <MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Center">
-                            <MudText Typo="Typo.h3">Season standings</MudText>
+                            <MudText Typo="Typo.h3">Season standings @(Season.Year)</MudText>
                         </MudStack>
                     </MudPaper>
                 </MudItem>
@@ -96,7 +96,7 @@
             <MudPaper Elevation="15">
                 <MudPaper MinHeight="60px">
                     <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
-                        <MudText Typo="Typo.h4">WDC results</MudText>
+                        <MudText Typo="Typo.h4">WDC results @(Season.Year)</MudText>
                         <MudSpacer />
                         <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
                             <ScreenshotButton TargetId="wdc-season-results" />
@@ -165,7 +165,7 @@
         <MudTabPanel Text="WCC results">
             <MudTable Items="@TeamResultsModel" Dense="true" id="wcc-season-results">
                 <ToolBarContent>
-                    <MudText Typo="Typo.h4">WCC results</MudText>
+                    <MudText Typo="Typo.h4">WCC results @(Season.Year)</MudText>
                     <MudSpacer />
                     <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined">
                         <ScreenshotButton TargetId="wcc-season-results" />
