--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -23,6 +23,7 @@
 
                 <MudIcon Icon="@Model.ClimateIcon" />
                 <MudText>@Model.Climate</MudText>
+                <MudIcon Icon="@Model.ClimateIcon" />
 
                 <MudSpacer />
 
