--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -86,16 +86,21 @@ th {
     text-align: center !important;
 }
 
-.number-col {
-    width: 30px;
+.number-col, .number-col-lg, number-col-xl {
     padding: 10px !important;
     text-align: center !important;
 }
 
+.number-col {
+    width: 30px;
+}
+
 .number-col-lg {
     width: 50px;
-    padding: 10px !important;
-    text-align: center !important;
+}
+
+.number-col-xl{
+    width: 75px;
 }
 
 .overflow-hider {
