fixed some styling at the race pages

--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -59,7 +59,7 @@
                 <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
                     <MudText Typo="Typo.caption">@context.Number</MudText>
                 </MudTd>
-                <MudTd Style="@(ViewHelper.SetBorderLeftStyle(context.Colour))">
+                <MudTd>
                     <MudText>@context.TeamName</MudText>
                 </MudTd>
                 <MudTd Class="number-col-xl">
