--- a/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
@@ -21,15 +21,15 @@
                 <MudTh>#</MudTh>
                 <MudTh Class="pa-0"></MudTh>
                 <MudTh>Driver</MudTh>
-                <MudTh Class="number-col">No.</MudTh>
+                <MudTh Class="number-col-lg">No.</MudTh>
                 <MudTh>Team</MudTh>
-                <MudTh Class="number-col-lg">PWR</MudTh>
+                <MudTh Class="number-col-xl">PWR</MudTh>
                 @for (int i = 1; i <= Model.AmountRuns; i++)
                 {
                     var j = i;
-                    <MudTh Class="number-col-lg">@j</MudTh>
+                    <MudTh Class="number-col-xl">@j</MudTh>
                 }
-                <MudTh Class="number-col-lg">Score</MudTh>
+                <MudTh Class="number-col-xl">Score</MudTh>
                 <MudTh>Gap</MudTh>
             </HeaderContent>
             <RowTemplate>
@@ -41,19 +41,19 @@
                 </MudTd>
                 <MudTd>
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                        <MudText Typo="Typo.body1">@context.FirstName</MudText>
+                        <MudText>@context.FirstName</MudText>
                         <MudText Typo="Typo.button">@context.LastName</MudText>
                         <MudSpacer />
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
                 </MudTd>
-                <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
+                <MudTd Class="number-col-lg" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
                     <MudText Typo="Typo.caption">@context.Number</MudText>
                 </MudTd>
                 <MudTd>
                     <MudText>@context.TeamName</MudText>
                 </MudTd>
-                <MudTd Class="number-col-lg">
+                <MudTd Class="number-col-xl">
                     <MudText Typo="Typo.caption">@context.Power</MudText>
                 </MudTd>
                 @for (int i = 0; i < context.RunValuesQ1.Length; i++)
@@ -65,7 +65,7 @@
                         </GradientColour>
                     </MudTd>
                 }
-                <MudTd Class="number-col-lg">
+                <MudTd Class="number-col-xl">
                     <GradientColour Min="@lowestQ1" Max="@highestQ1" Value="@context.MaxScoreQ1">
                         <MudText Typo="Typo.caption">@context.MaxScoreQ1</MudText>
                     </GradientColour>
@@ -96,15 +96,15 @@
                 <MudTh>#</MudTh>
                 <MudTh Class="pa-0"></MudTh>
                 <MudTh>Driver</MudTh>
-                <MudTh>No.</MudTh>
+                <MudTh Class="number-col-lg">No.</MudTh>
                 <MudTh>Team</MudTh>
-                <MudTh>PWR</MudTh>
+                <MudTh Class="number-col-xl">PWR</MudTh>
                 @for (int i = 1; i <= Model.AmountRuns; i++)
                 {
                     var j = i;
-                    <MudTh>@j</MudTh>
+                    <MudTh Class="number-col-xl">@j</MudTh>
                 }
-                <MudTh>Score</MudTh>
+                <MudTh Class="number-col-xl">Score</MudTh>
                 <MudTh>Gap</MudTh>
             </HeaderContent>
             <RowTemplate>
@@ -122,13 +122,13 @@
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
                 </MudTd>
-                <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
+                <MudTd Class="number-col-lg" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
                     <MudText Typo="Typo.caption">@context.Number</MudText>
                 </MudTd>
                 <MudTd>
                     <MudText>@context.TeamName</MudText>
                 </MudTd>
-                <MudTd>
+                <MudTd Class="number-col-xl">
                     <MudText Typo="Typo.caption">@context.Power</MudText>
                 </MudTd>
                 @for (int i = 0; i < context.RunValuesQ2.Length; i++)
@@ -140,7 +140,7 @@
                         </GradientColour>
                     </MudTd>
                 }
-                <MudTd>
+                <MudTd Class="number-col-xl">
                     <GradientColour Min="@lowestQ2" Max="@highestQ2" Value="@context.MaxScoreQ2">
                         <MudText Typo="Typo.caption">@context.MaxScoreQ2</MudText>
                     </GradientColour>
@@ -175,15 +175,15 @@
                 <MudTh>#</MudTh>
                 <MudTh Class="pa-0"></MudTh>
                 <MudTh>Driver</MudTh>
-                <MudTh>No.</MudTh>
+                <MudTh Class="number-col-lg">No.</MudTh>
                 <MudTh>Team</MudTh>
                 <MudTh>PWR</MudTh>
                 @for (int i = 1; i <= Model.AmountRuns; i++)
                 {
                     var j = i;
-                    <MudTh>@j</MudTh>
+                    <MudTh Class="number-col-xl">@j</MudTh>
                 }
-                <MudTh>Score</MudTh>
+                <MudTh Class="number-col-xl">Score</MudTh>
                 <MudTh>Gap</MudTh>
             </HeaderContent>
             <RowTemplate>
@@ -201,7 +201,7 @@
                         <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
                     </MudStack>
                 </MudTd>
-                <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
+                <MudTd Class="number-col-lg" Style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))">
                     <MudText Typo="Typo.caption">@context.Number</MudText>
                 </MudTd>
                 <MudTd>
@@ -219,7 +219,7 @@
                         </GradientColour>
                     </MudTd>
                 }
-                <MudTd>
+                <MudTd Class="number-col-xl">
                     <GradientColour Min="@lowestQ3" Max="@highestQ3" Value="@context.MaxScoreQ3">
                         <MudText Typo="Typo.caption">@context.MaxScoreQ3</MudText>
                     </GradientColour>
