--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -76,16 +76,16 @@
                 <MudTh Style="width: 40px">Grid</MudTh>
                 <MudTh Class="pa-0" Style="width: 5px"></MudTh>
                 <MudTh Style="width: 220px">Name</MudTh>
-                <MudTh Class="number-col" Style="width: 30px">No</MudTh>
+                <MudTh Class="number-col">No</MudTh>
                 <MudTh Style="width: 220px">Team</MudTh>
-                <MudTh Class="number-col" Style="width: 30px">PWR</MudTh>
+                <MudTh Class="number-col">PWR</MudTh>
                 <MudTh Style="width: 175px">ATT/DEF</MudTh>
                 <MudTh Class="tyre-col" Style="width: 50px">TYRE</MudTh>
-                <MudTh Class="number-col" Style="width: 30px">Pace</MudTh>
-                <MudTh Class="number-col-lg" Style="width: 50px">Status</MudTh>
+                <MudTh Class="number-col">Pace</MudTh>
+                <MudTh Class="number-col-lg">Status</MudTh>
                 @if (tooMuchInfo)
                 {
-                    <MudTh Class="number-col" Style="width: 30px">Score</MudTh>
+                    <MudTh Class="number-col">Score</MudTh>
                 }
                 <MudTh Style="width: 500px">Progression</MudTh>
             </HeaderContent>
