--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -86,7 +86,7 @@ th {
     text-align: center !important;
 }
 
-.number-col, .number-col-lg, number-col-xl {
+.number-col, .number-col-lg, .number-col-xl {
     padding: 10px !important;
     text-align: center !important;
 }
@@ -99,7 +99,7 @@ th {
     width: 50px;
 }
 
-.number-col-xl{
+.number-col-xl {
     width: 75px;
 }
 
